menu no longer wraps

--- a/main.css
+++ b/main.css
@@ -16,24 +16,28 @@ ul {
 .inline-list > li {
   list-style: none;
   display: inline-block;
-  float: left;
   margin-right: 1px;
 }
 
 
 .inline-list > li a {
   display: block;
-  min-width: 140px;
   height: 50px;
   text-align: center;
   line-height: 50px;
   font-family: Helvetica, Arial, sans-serif;
   color: #718da5;
   background-color: #374d5f;
+  white-space: nowrap;
 }
 
 .inline-list > li:hover a {
   background: #19c589;
+}
+
+.menu > li {
+  width: 23%;
+  max-width: 140px;
 }
 
 .section {
@@ -107,7 +111,6 @@ img {
 /* medium or bigger */
 @media (min-width: 992px) {
   .menu{
-    width: 100%;
     height: auto;
   }
   body{
@@ -118,7 +121,6 @@ img {
 /* medium or bigger */
 @media (min-width: 1200px) {
   .menu{
-    width: 100%;
     height: auto;
   }
   body{
@@ -129,7 +131,6 @@ img {
 /* extra small and small only */
 @media (max-width: 991px) {
   .menu{
-    width: 100%;
     height: auto;
   }
   body{
@@ -140,7 +141,6 @@ img {
 /*small only*/
 @media (min-width: 769px) and (max-width: 991px) {
   .menu{
-    width: 100%;
     height: auto;
   }
   body{
